<?xml version="1.0" encoding="UTF-8"?>
<project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance" xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/maven-v4_0_0.xsd">
  <modelVersion>4.0.0</modelVersion>
  <groupId>dev.tsvinc</groupId>
  <artifactId>music-sorter</artifactId>
  <version>0.0.7</version>
  <packaging>jar</packaging>
  <name>music-sorter</name>
  <url>https://tsvinc.dev</url>

  <distributionManagement>
    <repository>
      <id>github</id>
      <name>GitHub tsimbalyuk-sergiy Apache Maven Packages</name>
      <url>https://maven.pkg.github.com/tsimbalyuk-sergiy/music-sorter</url>
    </repository>
  </distributionManagement>

  <properties>
    <jdk.version>17</jdk.version>
    <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
    <project.reporting.outputEncoding>UTF-8</project.reporting.outputEncoding>
  </properties>

  <dependencies>

    <dependency>
      <groupId>com.google.guava</groupId>
      <artifactId>guava</artifactId>
      <version>33.4.0-jre</version>
    </dependency>

    <dependency>
      <groupId>io.vavr</groupId>
      <artifactId>vavr</artifactId>
      <version>0.10.6</version>
    </dependency>
    <dependency>
      <groupId>me.tongfei</groupId>
      <artifactId>progressbar</artifactId>
      <version>0.10.1</version>
    </dependency>
    <dependency>
      <groupId>net.jthink</groupId>
      <artifactId>jaudiotagger</artifactId>
      <version>3.0.1</version>
    </dependency>
    <dependency>
      <groupId>org.junit.jupiter</groupId>
      <artifactId>junit-jupiter</artifactId>
      <version>5.11.4</version>
      <scope>test</scope>
    </dependency>
    <dependency>
      <groupId>org.mockito</groupId>
      <artifactId>mockito-core</artifactId>
      <version>5.14.2</version>
      <scope>test</scope>
    </dependency>
    <dependency>
      <groupId>org.mockito</groupId>
      <artifactId>mockito-junit-jupiter</artifactId>
      <version>5.14.2</version>
      <scope>test</scope>
    </dependency>
    <dependency>
      <groupId>org.tinylog</groupId>
      <artifactId>jul-tinylog</artifactId>
      <version>2.8.0-M1</version>
    </dependency>
    <dependency>
      <groupId>org.tinylog</groupId>
      <artifactId>tinylog-api</artifactId>
      <version>2.8.0-M1</version>
    </dependency>
    <dependency>
      <groupId>org.tinylog</groupId>
      <artifactId>tinylog-impl</artifactId>
      <version>2.8.0-M1</version>
    </dependency>
  </dependencies>

  <repositories>
    <repository>
      <id>jitpack.io</id>
      <url>https://jitpack.io</url>
    </repository>
  </repositories>

  <build>
    <finalName>music-sorter</finalName>
    <plugins>
      <plugin>
        <groupId>org.apache.maven.plugins</groupId>
        <artifactId>maven-dependency-plugin</artifactId>
        <version>3.8.1</version>
      </plugin>
      <plugin>
        <groupId>org.apache.maven.plugins</groupId>
        <artifactId>maven-compiler-plugin</artifactId>
        <version>3.13.0</version>
        <configuration>
          <release>${jdk.version}</release>
        </configuration>
      </plugin>
      <!--Make this jar executable-->
      <plugin>
        <groupId>org.apache.maven.plugins</groupId>
        <artifactId>maven-jar-plugin</artifactId>
        <version>3.4.2</version>
        <configuration>
          <archive>
            <manifest>
              <mainClass>dev.tsvinc.music.sort.App</mainClass>
            </manifest>
          </archive>
        </configuration>
      </plugin>
      <plugin>
        <groupId>org.apache.maven.plugins</groupId>
        <artifactId>maven-shade-plugin</artifactId>
        <version>3.6.0</version>
        <executions>
          <!-- Run shade goal on package phase -->
          <execution>
            <goals>
              <goal>shade</goal>
            </goals>
            <phase>package</phase>
            <configuration>
              <transformers>
                <!-- add Main-Class to manifest file -->
                <transformer implementation="org.apache.maven.plugins.shade.resource.ManifestResourceTransformer">
                  <mainClass>dev.tsvinc.music.sort.App</mainClass>
                </transformer>
              </transformers>
            </configuration>
          </execution>
        </executions>
      </plugin>
      <plugin>
        <groupId>com.diffplug.spotless</groupId>
        <artifactId>spotless-maven-plugin</artifactId>
        <version>2.45.0</version>
        <configuration>
          <java>
            <includes>
              <include>src/**/*.java</include>
            </includes>
            <palantirJavaFormat>
              <version>2.50.0</version>
            </palantirJavaFormat>
            <importOrder>
              <order>java|javax,org,com,dev</order>
            </importOrder>
            <removeUnusedImports/>
            <formatAnnotations/>
          </java>
          <pom>
            <includes>
              <include>pom.xml</include>
            </includes>
            <sortPom>
              <expandEmptyElements>false</expandEmptyElements>
              <sortProperties>true</sortProperties>
              <sortDependencies>groupId,artifactId</sortDependencies>
            </sortPom>
          </pom>
          <markdown>
            <includes>
              <include>**/*.md</include>
            </includes>
            <flexmark/>
          </markdown>
          <yaml>
            <includes>
              <include>**/*.yml</include>
              <include>**/*.yaml</include>
            </includes>
            <jackson/>
          </yaml>
        </configuration>
        <executions>
          <execution>
            <goals>
              <goal>check</goal>
            </goals>
          </execution>
        </executions>
      </plugin>
    </plugins>
  </build>

  <profiles>
    <!-- GraalVM Native Image Profile -->
    <profile>
      <id>native</id>
      <build>
        <plugins>
          <plugin>
            <groupId>org.graalvm.buildtools</groupId>
            <artifactId>native-maven-plugin</artifactId>
            <version>0.10.3</version>
            <extensions>true</extensions>
            <configuration>
              <imageName>music-sorter</imageName>
              <mainClass>dev.tsvinc.music.sort.App</mainClass>
              <buildArgs>
                <buildArg>--no-fallback</buildArg>
                <buildArg>--report-unsupported-elements-at-runtime</buildArg>
                <buildArg>-H:+ReportExceptionStackTraces</buildArg>
                <buildArg>-H:+UnlockExperimentalVMOptions</buildArg>
                <buildArg>-H:+UseServiceLoaderFeature</buildArg>
                <buildArg>-H:+RemoveSaturatedTypeFlows</buildArg>
                <buildArg>--gc=serial</buildArg>
                <buildArg>--initialize-at-run-time=org.jaudiotagger,org.tinylog.runtime.ModernJavaRuntime</buildArg>
              </buildArgs>
            </configuration>
            <executions>
              <execution>
                <id>build-native</id>
                <goals>
                  <goal>compile-no-fork</goal>
                </goals>
                <phase>package</phase>
              </execution>
            </executions>
          </plugin>
        </plugins>
      </build>
    </profile>
  </profiles>
</project>
